--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
   "orientation": "portrait",
   "scope": "/pwaReservation/",
   "start_url": "/pwaReservation/",
+  "id": "/pwaReservation/",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
